# realtime-bpm-midi-sync

./: .gitignore  CLAUDE.md  README.md  memo.txt  pyproject.toml  requirements.txt  setlist.json
bpm_midi_sync/: __init__.py  beat_detector.py  config.py  controller.py  engine.py  gui.py  main.py  metrics.py  midi_clock.py  tempo_estimator.py  tempogram.py
bpm_midi_sync/eval/: __init__.py  batch_eval.py  corpus.json  param_sweep.py  reference.py  sim_drummer.py  synth.py
bpm_midi_sync/sources/: __init__.py  array.py  base.py  file.py  live.py  loopback.py
docs/: flows.json  gen_workflows.py  realtime-bpm-midi-sync-plan.md  workflows.html
tests/: test_autocorr_detector.py  test_controller.py  test_detector_engine.py  test_devlog.py  test_metrics.py  test_sim_drummer.py  test_tempo_estimator.py
