[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "realtime-bpm-midi-sync"
version = "0.1.0"
description = "生ドラムのリアルタイム BPM 検出 → BOSS ルーパー MIDI テンポ同期"
requires-python = ">=3.10"
dependencies = ["numpy>=1.23"]

[project.optional-dependencies]
audio = ["sounddevice>=0.4.6", "soundfile>=0.12"]
loopback = ["soundcard>=0.4.3"]
midi = ["mido>=1.3", "python-rtmidi>=1.5"]
detect = ["aubio>=0.4.9"]
eval = ["librosa>=0.10", "yt-dlp"]
dev = ["pytest>=7"]

[project.scripts]
bpm-midi-sync = "bpm_midi_sync.main:main"

[tool.setuptools.packages.find]
include = ["bpm_midi_sync*"]

[tool.setuptools.package-data]
"bpm_midi_sync.eval" = ["corpus.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
